[workspace]
members = ["env-settings", "env-settings-utils", "test-env-settings"]

[workspace.package]
authors = ["Dario Curreri <dariocurr@gmail.com>"]
categories = [
	"Configuration",
	"Development tools",
	"Filesystem",
	"Operating systems",
	"Parser implementations",
]
description = "Initialize Rust structs using environment variables"
documentation = ""
edition = "2021"
homepage = "https://github.com/dariocurr/env-settings"
keywords = [
	"basesettings",
	"env variables",
	"environment",
	"settings",
	"variables",
]
license = "MIT OR Apache-2.0"
publish = ["env-settings", "env-settings-derive"]
readme = "README.md"
repository = "https://github.com/dariocurr/env-settings"
version = "0.1.0"
