[workspace]
members = [
	"env-settings",
	"env-settings-derive",
	"env-settings-utils",
	"test-env-settings",
]
resolver = "2"

[workspace.package]
authors = [
	"dariocurr <dariocurr@gmail.com>",
]
categories = [
	"config",
	"filesystem",
	"os",
	"parsing",
]
description = "initialize rust structs using environment variables (like `pydantic`'s `BaseSettings`)"
documentation = "http://docs.rs/env-settings/"
edition = "2024"
homepage = "https://github.com/dariocurr/env-settings"
keywords = [
	"BaseSettings",
	"config",
	"environment",
	"settings",
	"variables",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dariocurr/env-settings"
version = "0.1.13"
