[package]
name = "env-settings-utils"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dotenvy = "0.15"

[dev-dependencies]
assert_fs = "1.0"
rstest = "0.18"
