[package]
name = "env-settings-utils"
documentation = "https://docs.rs/env-settings-utils/"
publish = true

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dotenvy = "0.15"
thiserror = "2.0"

[dev-dependencies]
assert_fs = "1.0"
rstest = "0.24"
