[package]
name = "env-settings"
documentation = "https://docs.rs/env-settings/"
publish = true

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
env-settings-utils = { path = "./../env-settings-utils", version = "0.1" }
env-settings-derive = { path = "./../env-settings-derive", version = "0.1" }
