[package]
name = "env-settings"
documentation = "https://docs.rs/env-settings/"
publish = true

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
env-settings-derive = "0.1"
env-settings-utils = "0.1"

[package.metadata.cargo-udeps.ignore]
env-settings-derive = true
env-settings-utils = true
