[package]
name = "test-env-settings"
publish = false

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
dotenvy = "0.15"
env-settings-derive = "0.1"
env-settings-utils = "0.1"
rstest = "0.18"
