[package]
name = "test-env-settings"
publish = false

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
dotenvy = "0.15"
env-settings-derive = { path = "./../env-settings-derive" }
env-settings-utils = { path = "./../env-settings-utils" }
rstest = "0.23"
