[package]
name = "env-settings-derive"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
env-settings-utils = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
